# geoips_clavrx

./: .gitignore  CHANGELOG.rst  CHANGELOG_colormaps.rst  CHANGELOG_static_sectors.rst  DELETE_ME  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.py  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: generate-release-note.yaml  status-check.yaml
docs/archive/: CHANGELOG.md
docs/source/concepts/: index.rst
docs/source/concepts/architecture/: index.rst
docs/source/concepts/configuration/: index.rst
docs/source/concepts/functionality/: index.rst
docs/source/concepts/scope/: index.rst
docs/source/contact/: index.rst
docs/source/contribute/: coding-standards.rst  git-workflow.rst  index.rst
docs/source/contribute/testing/: index.rst
docs/source/geoips_clavrx_api/: index.rst
docs/source/getting-started/: index.rst  system-requirements.rst
docs/source/releases/: index.rst  v1_10_0.rst  v1_10_0a0.rst  v1_10_0a1.rst  v1_10_0a2.rst  v1_10_0a3.rst  v1_10_2.rst  v1_10_3.rst  v1_11_0.rst  v1_11_3a0.rst  v1_11_7.rst  v1_11_7a0.rst  v1_12_0a0.rst  v1_12_1.rst  v1_12_2.rst  v1_12_2a0.rst  v1_12_4.rst  v1_13_0.rst  v1_14_0a0.rst  v1_9_1.rst  vv1000_10_105.rst  vv1000_10_106.rst  vv1_15_0.rst
docs/source/tutorials/: creating-imagery-from-clavrx.rst  index.rst  running-clavrx-pipeline.rst
geoips_clavrx/: README.md  __init__.py  _version.py  run_clavrxorb.py  version.py
geoips_clavrx/ancillary/: ancil_data.py  update_dynamic.py
geoips_clavrx/clavrx/: README.md  clavrx_installation_test.py  clavrx_options_template  clavrx_options_template.toml  full_l2_list  get_ancildata_static.py  hdf4_installer.py  hdf5_installer.py  himawari_installer.py  install_clavrx.py  install_utils.py  netcdf_installer.py  rttov_installer.py  run_clavrx.py  update_ancildata_dynamic.py  user_change_me.py
geoips_clavrx/interface_modules/readers/: clavrx_hdf4.py  clavrx_netcdf4.py
geoips_clavrx/interface_modules/user_colormaps/: cmap_IR.py  cmap_cldHeight.py  cmap_cldHeightTop.py  cmap_cldOpd.py  cmap_cldReff.py  cmap_cldTemp.py
geoips_clavrx/plugins/modules/: __init__.py
geoips_clavrx/test/: test_clavrx.py
setup/: config_clavrx  config_clavrx_build
tests/: test_all.sh  test_clavrx_build.sh
tests/integration_tests/: test_geoips_clavrx.py  test_integration.py
tests/scripts/: abi.Cloud-Fraction.imagery_clean.sh  abi.clavrx_proc.sh  abi.imagery_clean.sh  abi.mst.Cloud-Top-Height.imagery_annotated.sh  abi_cldFraction.sh  ahi.Cloud-Base-Height.imagery_clean.sh  ahi.Cloud-Fraction.imagery_clean.sh  ahi.Cloud-Mask.imagery_clean.sh  ahi.Cloud-Optical-Depth.imagery_clean.sh  ahi.Cloud-Phase.imagery_clean.sh  ahi.Cloud-Temp-ACHA.imagery_clean.sh  ahi.Cloud-Top-Height.imagery_clean.sh  ahi.Cloud-Type.imagery_clean.sh  ahi.Effective-Radius.imagery_clean.sh  ahi.Temp-11p0.imagery_clean.sh  ahi.Temp-3p75.imagery_clean.sh  ahi.clavrx_proc.sh  ahi.imagery_clean.sh  ahi_Temp11p0.sh  ahi_Temp3p75.sh  ahi_cldFraction.sh  ahi_cldHeight.sh  ahi_cldHeightBase.sh  ahi_cldHeightTop.sh  ahi_cldMask.sh  ahi_cldOpd.sh  ahi_cldPhase.sh  ahi_cldReff.sh  ahi_cldTemp.sh  ahi_cldType.sh  clavrx_proc_to_geoips.sh  modis.clavrx_proc.sh  viirs.clavrx_proc.sh
tests/test_pytest/: clavrx_reader_test.py  test_all_yaml_plugins.py
(+138 files in other folders)
