[build-system]
requires = ["setuptools>=61.2", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "*.py",
    "*.yaml",
    "yaml_configs/*",
    "yaml_configs/*/*",
    "yaml_configs/*/*/*",
    "image_utils/ascii_palettes/*",
]

[tool.setuptools.dynamic]
entry-points = {file = ["entry-points.ini"]}

[tool.setuptools_scm]
"version_scheme" = "post-release"  # Use current version .postN vs incrementing
"local_scheme" = "no-local-version"  # Don't include hash, or date, just postN
"write_to" = "geoips_clavrx/version.py"  # Write an actual file

[project]
name = "geoips_clavrx"
authors = []
description = "CLAVR-x GeoIPS Plugin Package"
readme = "README.md"
requires-python = ">=3.9"
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.entry-points."geoips.algorithms"]
"cloud.cldFraction" = "geoips_clavrx.plugins.modules.algorithms.cloud.cldFraction:cldFraction"
"cloud.cldType" = "geoips_clavrx.plugins.modules.algorithms.cloud.cldType:cldType"
"cloud.cldMask" = "geoips_clavrx.plugins.modules.algorithms.cloud.cldMask:cldMask"
"cloud.cldHeightBase" = "geoips_clavrx.plugins.modules.algorithms.cloud.cldHeightBase:cldHeightBase"
"cloud.cldHeightTop" = "geoips_clavrx.plugins.modules.algorithms.cloud.cldHeightTop:cldHeightTop"
"cloud.cldHeight" = "geoips_clavrx.plugins.modules.algorithms.cloud.cldHeight:cldHeight"
"cloud.cldOpd" = "geoips_clavrx.plugins.modules.algorithms.cloud.cldOpd:cldOpd"
"cloud.cldPhase" = "geoips_clavrx.plugins.modules.algorithms.cloud.cldPhase:cldPhase"
"cloud.cldTemp" = "geoips_clavrx.plugins.modules.algorithms.cloud.cldTemp:cldTemp"
"cloud.Temp3p75" = "geoips_clavrx.plugins.modules.algorithms.cloud.Temp3p75:Temp3p75"
"cloud.Temp11p0" = "geoips_clavrx.plugins.modules.algorithms.cloud.Temp11p0:Temp11p0"
"cloud.cldReff" = "geoips_clavrx.plugins.modules.algorithms.cloud.cldReff:cldReff"

[project.entry-points."geoips.readers"]
clavrx_hdf4 = "geoips_clavrx.plugins.modules.readers.clavrx_hdf4:clavrx_hdf4"

[project.entry-points."geoips.colormaps"]
cmap_cldFraction = "geoips_clavrx.plugins.modules.colormaps.cmap_cldFraction:cmap_cldFraction"
cmap_cldType = "geoips_clavrx.plugins.modules.colormaps.cmap_cldType:cmap_cldType"
cmap_cldMask = "geoips_clavrx.plugins.modules.colormaps.cmap_cldMask:cmap_cldMask"
cmap_cldHeightBase = "geoips_clavrx.plugins.modules.colormaps.cmap_cldHeightBase:cmap_cldHeightBase"
cmap_cldHeightTop = "geoips_clavrx.plugins.modules.colormaps.cmap_cldHeightTop:cmap_cldHeightTop"
cmap_cldHeight = "geoips_clavrx.plugins.modules.colormaps.cmap_cldHeight:cmap_cldHeight"
cmap_cldOpd = "geoips_clavrx.plugins.modules.colormaps.cmap_cldOpd:cmap_cldOpd"
cmap_cldPhase = "geoips_clavrx.plugins.modules.colormaps.cmap_cldPhase:cmap_cldPhase"
cmap_cldTemp = "geoips_clavrx.plugins.modules.colormaps.cmap_cldTemp:cmap_cldTemp"
cmap_IR = "geoips_clavrx.plugins.modules.colormaps.cmap_IR:cmap_IR"
cmap_cldReff = "geoips_clavrx.plugins.modules.colormaps.cmap_cldReff:cmap_cldReff"
